# airbyte-prefect-recipe

./: .gitignore  README.md  pyproject.toml
github_common_contributors/: dbt_project.yml
github_common_contributors/models/: commit_authors.sql  issue_submitters.sql
prefect/: flow.py
