[tool.poetry]
name = "airbyte-prefect-recipe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "^1.0.0"
dbt-snowflake = "^1.0.0"
prefect = "^0.15.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
