[tool.poetry]
name = "airbyte-prefect-recipe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "^1.0.0"
dbt-snowflake = "^1.0.0"
prefect = {version = "^0.15.10", extras = ["snowflake"]}

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
